tests/error/new_abstract.gw
#! [contains] can't use 'new' on abstract type
new Shred;
